# qt_cmake

./: .gitignore
00_core/: README.txt
01_basic/: README.txt
01_ui/: README.txt
02_basic/: CMakeLists.txt
02_preset/: README.txt  main.cpp
03_helloqml/: CMakeLists.txt  CMakePresets.json  README.txt
03_preset/: CMakePresets.json
04_helloqml/: README.txt  main.cpp
05_qrc/: CMakeLists.txt  Main.qml  README.txt  main.cpp
06_qml_module/: CMakeLists.txt  README.txt  main.cpp  main.qml
07_qml_file/: CMakeLists.txt  README.txt  main.cpp
08_signal_slot/: CMakeLists.txt  main.cpp  signal.cpp  signal.h  slot.cpp  slot.h
