cmake_minimum_required(VERSION 3.16)

project(qt_console LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

add_executable(qt_console
  main.cpp
  signal.h signal.cpp
  slot.h slot.cpp


)
target_link_libraries(qt_console Qt${QT_VERSION_MAJOR}::Core)
